Change CI/CD to new name

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=vchicago/flight-parser
+          DOCKER_IMAGE=vchicago/data-parser
           VERSION=dev
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
@@ -46,9 +46,9 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBECTL }}
         with:
-          args: set image deployment/flight-parser flight-parser=vchicago/flight-parser:${{ steps.prep.outputs.tags }} -n dev
+          args: set image deployment/data-parser data-parser=vchicago/data-parser:${{ steps.prep.outputs.tags }} -n dev
       - name: Verify deployment
         if: ${{ github.event_name != 'push' }}
         uses: actions-hub/kubectl@master
         with:
-          args: rollout status deployment/flight-parser -n dev
+          args: rollout status deployment/data-parser -n dev
