Done deploy on PRs

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -41,12 +41,14 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
       - name: Deploy image to cluster
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.KUBECTL }}
         with:
           args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.tags }} -n dev
       - name: Verify deployment
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions-hub/kubectl@master
         with:
           args: rollout status deployment/data-parser -n dev
