--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -28,6 +28,7 @@ jobs:
             TAGS="$TAGS,${DOCKER_IMAGE}:latest"
           fi
           echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=version::${VERSION}
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -46,7 +47,7 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBECTL }}
         with:
-          args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.tags }} -n dev
+          args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.version }} -n dev
       - name: Verify deployment
         if: ${{ github.event_name != 'pull_request' }}
         uses: actions-hub/kubectl@master
