--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -28,6 +28,7 @@ jobs:
             TAGS="$TAGS,${DOCKER_IMAGE}:latest"
           fi
           echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=version::${VERSION}
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -41,14 +42,14 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
       - name: Deploy image to cluster
-        if: ${{ github.event_name != 'push' }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.KUBECTL }}
         with:
-          args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.tags }} -n prod
+          args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.version }} -n prod
       - name: Verify deployment
-        if: ${{ github.event_name != 'push' }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions-hub/kubectl@master
         with:
           args: rollout status deployment/data-parser -n prod
