--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,7 +16,7 @@ jobs:
         id: prep
         run: |
           DOCKER_IMAGE=vzau/data-parser
-          VERSION=dev
+          VERSION=$(git rev-parse --short "$GITHUB_SHA")
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
