--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -47,9 +47,9 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBECTL }}
         with:
-          args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.version }} -n prod
+          args: set image deployment/data-parser data-parser=vzau/data-parser:${{ steps.prep.outputs.version }} -n zau-prod
       - name: Verify deployment
         if: ${{ github.event_name != 'pull_request' }}
         uses: actions-hub/kubectl@master
         with:
-          args: rollout status deployment/data-parser -n prod
+          args: rollout status deployment/data-parser -n zau-prod
